* MAJOR version is incremented when incompatible API changes are commited.
* MINOR version is incremented when new functionalities are commited, however the new implementation is still backward-compatible.
* PATCH version is incremented when backward-compatible bug fixes are commited.

The keys used are:
  !: fixed/modified feature, -: deleted feature, +: new feature


v1.1.0 -- 17-01.2023
  + Documentation general review/update | adding CONFIG-KEYS | adding structured Changelog
  + Introduced install.sh to automate the build/install process
  + Introducing data delivery via ZMQ (PUSH/PULL). With this new data delivery option I enable the possibility to embed the gRPC dial-out collector
    into pmtelemetryd

v1.0.0 -- 29-09-2022
  + Introduced gRPC dial-out support for Cisco XR/XE (testing devices: Cisco-XR 7.4.1@NCS-540 | Cisco-XE 17.06.01prd7@C8000V)
    (https://github.com/ios-xr/model-driven-telemetry/blob/ebc059d77f813b63bb5a3139f5178ad11665d49f/protos/66x/mdt_grpc_dialout/mdt_grpc_dialout.proto)
  + Introduced GPB-KV encoding capabilities for Cisco XR/XE (testing devices: Cisco-XR 7.4.1@NCS-540 | Cisco-XE 17.06.01prd7@C8000V)
    (https://github.com/ios-xr/model-driven-telemetry/blob/ebc059d77f813b63bb5a3139f5178ad11665d49f/protos/66x/telemetry.proto)
  + Introduced gRPC dial-out support for Juniper JunOS (testing device: JunOS 20.4R3-S2.6@mx10003)
    (https://www.juniper.net/documentation/us/en/software/junos/interfaces-telemetry/topics/topic-map/telemetry-grpc-dialout-ta.html)
  + Introduced JSON/GPB-KV encoding capabilities for Juniper JunOS (testing device: JunOS 20.4R3-S2.6@mx10003)
    (https://www.juniper.net/documentation/us/en/software/junos/interfaces-telemetry/topics/topic-map/telemetry-grpc-dialout-ta.html)
  + Introduced gRPC dial-out support for Huawei VRP (testing device: VRP V800R021C10SPC300T@NE40E)
    (https://support.huawei.com/enterprise/en/doc/EDOC1100139549/40577baf/common-proto-files)