@@ -223,7 +223,7 @@ private:
     const std::string log_level;
 };
 
-// Kafka configuration parameters
+// ZMQ configuration parameters
 class ZmqCfgHandler {
 public:
     // Params are initialized within the constructor
@@ -233,12 +233,12 @@ public:
         debug("destructor: ~ZmqCfgHandler()"); };
 
     // Setters - directly from the configuration file
-    bool lookup_zmq_parameters(const std::string &cfg_path,
+    bool lookup_zmq_parameters(const std::string &zmq_uri,
         std::map<std::string, std::string> &params);
 
     // Getters
     //const std::string &get_zmq_uri() const {
-    //    return zmq_uri; };
+    //    return this->zmq_uri; };
 private:
     const std::string zmq_uri;
 };
